# aviasales-clone

./: .gitignore  docker-compose.dev.yml
server/: .env-sample  Dockerfile  config.py  manage.py  pyproject.toml
server/aviasales_clone/: asgi.py  settings.py  urls.py  wsgi.py
server/aviasales_clone/aviasales/: route.py  schemas.py  service.py
server/settings/: __init__.py  base.py  development.py  production.py
web/: .eslintrc.cjs  index.html  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  Router.tsx
web/src/components/: SearchBar.tsx
web/src/hooks/aviasales/: usePlaces.tsx
web/src/screens/Home/: Home.tsx
web/src/styles/: colors.ts  theme.ts
web/src/utils/: axios-instance.ts  variables.ts
